[package]
name = "adapter_plcc_nwsyy"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
log4rs = { version = "1.3", features = ["gzip"] }
nom = "8.0"
tokio = { version = "1.45", features = ["net", "io-util", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "rustls-tls"] }
async-channel = "2.3"
rocksdb = { version = "0.23", default-features = false, features = ["zstd", "bindgen-runtime"] }


actix = { version = "0.13"}
actix-rt = { version = "2.10"}
actix-multipart = { version = "0.7"}
actix-web = { version = "4.11", features = ["rustls-0_23"]}
actix-cors = { version = "0.7"}
actix-files = { version = "0.6"}

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_cbor = "0.11"
serde_json = "1.0"

base64 = "0.22"
hmac = "0.12"
sha2 = { version = "0.10", default-features = false }

derive_more = { version = "2.0", features = ["from_str", "display"] }
rumqttc = "0.24"
chrono = "0.4"
byteorder = "1.5"
regex = "1.11"
fnv = "1.0"
num-complex = "0.4"
ndarray = "0.16"
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"      # 或 "s"，都用于减小体积
panic = "abort"
